<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffff"
    android:gravity="top"
    tools:context=".fragments.DashboardFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="205dp"
            android:src="@drawable/pic3"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:background="#000000">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
            <ImageView
                android:id="@+id/iv1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/cse"
                android:layout_centerVertical="true"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/iv1"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp">
                    <TextView
                        android:id="@+id/tytel1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cse"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_toEndOf="@id/iv1"/>
                    <TextView
                        android:id="@+id/detalse1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bsccse"
                        android:textSize="10dp"
                        android:layout_toEndOf="@id/iv1" />
                </LinearLayout>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:background="#000000">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <ImageView
                    android:id="@+id/iv2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/eee"
                    android:layout_centerVertical="true"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/iv2"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp">
                    <TextView
                        android:id="@+id/tytel2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eee"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_toEndOf="@id/iv2"/>

                    <TextView
                        android:id="@+id/detalse2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/iv1"
                        android:text="@string/bsceee"
                        android:textSize="10dp" />
                </LinearLayout>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:background="#000000">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <ImageView
                    android:id="@+id/iv3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ete"
                    android:layout_centerVertical="true"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/iv3"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp">
                    <TextView
                        android:id="@+id/tytel3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ete"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_toEndOf="@id/iv3"/>
                    <TextView
                        android:id="@+id/detalse3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bscete"
                        android:textSize="10dp"
                        android:layout_toEndOf="@id/iv3" />
                </LinearLayout>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_horizontal"
            android:background="#000000">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <ImageView
                    android:id="@+id/iv4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/pharma"
                    android:layout_centerVertical="true"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/iv4"
                    android:orientation="vertical"
                    android:layout_marginLeft="20dp">
                    <TextView
                        android:id="@+id/tytel4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pharma"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:layout_toEndOf="@id/iv4"/>
                    <TextView
                        android:id="@+id/detalse4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bscpharma"
                        android:textSize="10dp"
                        android:layout_toEndOf="@id/iv4" />
                </LinearLayout>

            </RelativeLayout>


        </androidx.cardview.widget.CardView>






    </LinearLayout>
    </ScrollView>


</LinearLayout>